--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,22 +1,18 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
-    },
-    "extends": [
-        "plugin:react/recommended",
-        "airbnb","prettier"
-    ], 
-    "overrides": [
-    ],
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "plugins": [
-        "react","prettier"
-    ],
-    "rules": {
-        "prettier/prettier":"error"
-    }
+  "env": {
+    "browser": true,
+    "es2021": true
+  },
+  "extends": ["plugin:react/recommended", "airbnb", "prettier"],
+  "overrides": [],
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "plugins": ["react", "prettier"],
+  "rules": {
+    "default-param-last": 0,
+    "prettier/prettier": ["error", { "endOfLine": "auto" }],
+    "react/prop-types": [0]
+  }
 }
